--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -1,109 +1,117 @@
 :root {
-    --border-light-blue: rgb(136, 211, 203);
-    --color-text: #34343b;
-  }
+  --border-light-blue: rgb(136, 211, 203);
+  --color-text: #34343b;
+}
 
 body {
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: medium;
-    line-height: 1.5px;
-    background-color: white;
-  }
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: medium;
+  line-height: 1.5px;
+  background-color: white;
+}
 
 header {
-    display: flex;
-    align-items: flex-start;
-    justify-content: space-between;
-    background-color: var(--color-text);
-  }
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+  background-color: var(--color-text);
+}
 
 h1 {
-    color: var(--color-text);
-    background-color: var(--border-light-blue);
-    padding: 20px;
-  }
+  color: var(--color-text);
+  background-color: var(--border-light-blue);
+  padding: 20px;
+}
 
 .text-right {
-    position: relative;
-    text-align: center;
-    margin-top: 15px;
-  }
+  position: relative;
+  text-align: center;
+  margin-top: 15px;
+}
 
-  ul {
-    text-align: center;
-  }
+.text {
+  margin-left: 200px;
+}
+
+ul {
+  text-align: center;
+}
 
 .page-title {
-    background-color: var(--border-light-blue);
-    background-position: 10px;
-    color: var(--color-text);
-    padding: 0% 15px 0 2%;
-  }
+  background-color: var(--border-light-blue);
+  background-position: 10px;
+  color: var(--color-text);
+  padding: 0% 15px 0 2%;
+}
 
 .bannerimage {
-    background-image: linear-gradient(to bottom, rgba(76, 140, 186, 0.52), rgba(16, 60, 101, 0.73)),url("02-hero-bg.jpg");
-    background-size: 100%;
-    height: 210px;
-    position: relative;
-  }
+  background-image: linear-gradient(to bottom, rgba(76, 140, 186, 0.52), rgba(16, 60, 101, 0.73)),url("02-hero-bg.jpg");
+  background-size: 100%;
+  height: 210px;
+  position: relative;
+}
+
+.about-me {
+  margin-top: 100px;
+  margin-bottom: 100px;
+  padding-left: 100px;
+  width: 100%;
+  flex-wrap: wrap;
+  display: flex;
+  justify-content: space-between;
+  height: 100%;
+}
+
+p {
+  flex-wrap: wrap;
+  display: flex;
+  word-wrap: break-word;
+}
 
 h2 {
-    color: var(--color-text);
-    background-color: var(--border-light-blue);
-    position: absolute;
-    top: 60%;
-    right: 10%;
-    padding: 15px;
-  }
+  color: var(--color-text);
+  background-color: var(--border-light-blue);
+  position: absolute;
+  top: 60%;
+  right: 10%;
+  padding: 15px;
+}
 
-  .top-image-box {
-    height: 200px;
-    width: 200px;
-  }
+.work {
+  display: flex;
+  justify-content: space-between;
+}
 
-  li {
-    display: inline;
-    padding: 0px 20px;
-    text-decoration: none;
-  }
+.box {
+  width: 500px;
+  display: flex;
+  flex-wrap: wrap;
+}
 
-  a {
-    color: var(--border-light-blue);
-  }
+li {
+  display: inline;
+  padding: 0px 20px;
+  text-decoration: none;
+}
 
-  h3 {
-    overflow-wrap: break-word;
-  }
+a {
+  color: var(--border-light-blue);
+}
 
-  footer {
-    padding: 30px;
-    clear: both;
-    text-align: left;
-    font-size: x-large;
-    text-indent: 50px;
-  }
+h3 {
+  overflow-wrap: break-word;
+  font-size: xx-large;
+}
 
-  .tel {
-    font-size: large;
-    color: var(--color-text)
-  }
+footer {
+  padding: 30px;
+  clear: both;
+  text-align: left;
+  font-size: x-large;
+  text-indent: 50px;
+}
 
-  .ler {
-    font-size: large;
-    color: var(--color-text)
-  }
-
-  .git {
-    font-size: large;
-    color: var(--color-text)
-  }
-
-  .twi {
-    font-size: large;
-    color: var(--color-text)
-  }
-
-  .spo {
-    font-size: large;
-    color: var(--color-text)
-  }
+ul.contact-info > li a {
+  font-size: large;
+  color: var(--color-text)
+}
