--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -6,21 +6,17 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
   font-size: medium;
-  line-height: 1.5px;
   background-color: white;
 }
 
 header {
   display: flex;
-  align-items: flex-start;
   justify-content: space-between;
   background-color: var(--color-text);
 }
 
-h1 {
-  color: var(--color-text);
-  background-color: var(--border-light-blue);
-  padding: 20px;
+a {
+  color: var(--border-light-blue)
 }
 
 .text-right {
@@ -29,19 +25,16 @@ h1 {
   margin-top: 15px;
 }
 
-.text {
-  margin-left: 200px;
-}
-
-ul {
-  text-align: center;
-}
-
-.page-title {
-  background-color: var(--border-light-blue);
-  background-position: 10px;
+h1 {
   color: var(--color-text);
-  padding: 0% 15px 0 2%;
+  background-color: var(--border-light-blue);
+  padding: 20px;
+}
+
+li {
+  display: inline;
+  padding: 0px 20px;
+  text-decoration: none;
 }
 
 .bannerimage {
@@ -49,23 +42,6 @@ ul {
   background-size: 100%;
   height: 210px;
   position: relative;
-}
-
-.about-me {
-  margin-top: 100px;
-  margin-bottom: 100px;
-  padding-left: 100px;
-  width: 100%;
-  flex-wrap: wrap;
-  display: flex;
-  justify-content: space-between;
-  height: 100%;
-}
-
-p {
-  flex-wrap: wrap;
-  display: flex;
-  word-wrap: break-word;
 }
 
 h2 {
@@ -77,25 +53,12 @@ h2 {
   padding: 15px;
 }
 
-.work {
+.about-me {
+  margin-top: 100px;
+  margin-bottom: 100px;
+  padding-left: 100px;
+  width: 100%;
   display: flex;
-  justify-content: space-between;
-}
-
-.box {
-  width: 500px;
-  display: flex;
-  flex-wrap: wrap;
-}
-
-li {
-  display: inline;
-  padding: 0px 20px;
-  text-decoration: none;
-}
-
-a {
-  color: var(--border-light-blue);
 }
 
 h3 {
@@ -103,12 +66,46 @@ h3 {
   font-size: xx-large;
 }
 
+.text {
+  margin-left: 200px;
+}
+
+p {
+  padding-top: 20px;
+}
+
+.work {
+  margin-top: 100px;
+  margin-bottom: 100px;
+  padding-left: 100px;
+  width: 100%;
+  display: flex;
+}
+
+.top-image-box {
+  margin-left: 200px;
+}
+
+.box-1 {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  width: 200px;
+  height: 200px;
+}
+
+
 footer {
-  padding: 30px;
-  clear: both;
-  text-align: left;
-  font-size: x-large;
-  text-indent: 50px;
+  margin-top: 100px;
+  margin-bottom: 100px;
+  padding-left: 100px;
+  width: 100%;
+  display: flex;
+}
+
+.contact-info {
+  margin-left: 400px;
 }
 
 ul.contact-info > li a {
