--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -84,6 +84,7 @@ p {
 
 .top-image-box {
   margin-left: 500px;
+  margin-bottom: 50px;
 }
 
 img {
@@ -96,6 +97,7 @@ img {
   flex-wrap:wrap;
   align-items: center;
   justify-content: center;
+  margin-bottom: 50px;
 }
 
 .box-2 {
@@ -105,7 +107,9 @@ img {
   justify-content: center;
 }
 
-
+h4 {
+  
+}
 
 footer {
   margin-top: 100px;
