--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -1,6 +1,6 @@
 :root {
-  --border-light-blue: rgb(136, 211, 203);
-  --color-text: #34343b;
+  --border-light-green: #AFEAAF;
+  --color-text: #2A382A;
 }
 
 body {
@@ -16,7 +16,7 @@ header {
 }
 
 a {
-  color: var(--border-light-blue)
+  color: var(--border-light-green)
 }
 
 .text-right {
@@ -27,7 +27,7 @@ a {
 
 h1 {
   color: var(--color-text);
-  background-color: var(--border-light-blue);
+  background-color: var(--border-light-green);
   padding: 20px;
 }
 
@@ -38,7 +38,7 @@ li {
 }
 
 .bannerimage {
-  background-image: linear-gradient(to bottom, rgba(76, 140, 186, 0.52), rgba(16, 60, 101, 0.73)),url("02-hero-bg.jpg");
+  background-image: linear-gradient(to bottom, rgba(114, 208, 114, 0.52), rgba(45, 94, 48, 0.73)),url("02-hero-bg.jpg");
   background-size: 100%;
   height: 210px;
   position: relative;
@@ -46,74 +46,120 @@ li {
 
 h2 {
   color: var(--color-text);
-  background-color: var(--border-light-blue);
+  background-color: var(--border-light-green);
   position: absolute;
   top: 60%;
   right: 10%;
   padding: 15px;
 }
 
-.about-me {
-  margin-top: 100px;
-  margin-bottom: 100px;
-  padding-left: 100px;
-  width: 100%;
+.about-section{
   display: flex;
+  justify-content: space-between;
+  margin-top: 20px;
+}
+
+.about-me {
+  text-align: right;
+  width: 15%;
+  padding: 10px;
+  border-right: 5px solid var(--border-light-green);
 }
 
 h3 {
   overflow-wrap: break-word;
   font-size: xx-large;
-  color: var(--border-light-blue);
-  border-right: 3px solid var(--border-light-blue);
+  color: var(--border-light-green);
 }
 
 .text {
-  margin-left: 200px;
+  margin: 10px;
+  width: 85%;
 }
 
 p {
   padding-top: 20px;
 }
 
+.work-section{
+  display: flex;
+  justify-content: space-between;
+  margin-top: 20px;
+}
+
 .work {
-  margin-top: 100px;
-  margin-bottom: 100px;
-  padding-left: 100px;
-  width: 100%;
+  text-align: right;
+  width: 15%;
+  padding: 10px;
+  border-right: 5px solid var(--border-light-green);
+}
+
+.image-container{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  width: 85%;
 }
 
 .top-image-box {
-  margin-left: 500px;
-  margin-bottom: 50px;
-}
-
-img {
-  width: 400px;
-  height: 400px;
+  width: 100%;
+  border: 5px solid var(--border-light-green);
+  overflow: hidden;
 }
 
 .box-1 {
-  display: flex;
-  flex-wrap:wrap;
-  align-items: center;
-  justify-content: center;
-  margin-bottom: 50px;
+  width: 100%;
+  border: 5px solid var(--border-light-green);
+  overflow: hidden;
 }
 
 .box-2 {
-  display: flex;
-  flex-wrap:wrap;
-  align-items: center;
-  justify-content: center;
+  width: 100%;
+  border: 5px solid var(--border-light-green);
+  overflow: hidden;
+}
+
+.box-3 {
+  width: 100%;
+  border: 5px solid var(--border-light-green);
+  overflow: hidden;
+}
+
+.box-4 {
+  width: 100%;
+  border: 5px solid var(--border-light-green);
+  overflow: hidden;
+}
+
+.project {
+  color: var(--color-text);
+}
+
+.bottom-left {
+  position: relative;
+  background-color: var(--border-light-green);
+  padding: 15px;
+ 
 }
 
 footer {
   margin-top: 100px;
   margin-bottom: 100px;
-  padding-left: 100px;
   width: 100%;
   display: flex;
+}
+
+.footer {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 20px;
+}
+
+.contact {
+  text-align: right;
+  width: 15%;
+  padding: 10px;
+  border-right: 5px solid var(--border-light-green);
 }
 
 .contact-info {
