--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -38,7 +38,7 @@ li {
 }
 
 .bannerimage {
-  background-image: linear-gradient(to bottom, rgba(114, 208, 114, 0.52), rgba(45, 94, 48, 0.73)),url("02-hero-bg.jpg");
+  background-image: linear-gradient(to bottom, rgba(155, 214, 151, 0.563), rgba(43, 65, 45, 0.73)),url("02-hero-bg.jpg");
   background-size: 100%;
   height: 210px;
   position: relative;
@@ -98,7 +98,8 @@ p {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  width: 85%;
+  width: 82%;
+  margin: 10px;
 }
 
 .top-image-box {
@@ -138,7 +139,7 @@ p {
 .bottom-left {
   position: relative;
   background-color: var(--border-light-green);
-  padding: 15px;
+  padding: 10px;
  
 }
 
@@ -151,7 +152,6 @@ footer {
 
 .footer {
   display: flex;
-  justify-content: space-between;
   margin-top: 20px;
 }
 
@@ -163,7 +163,7 @@ footer {
 }
 
 .contact-info {
-  margin-left: 250px;
+  margin-left: 400px;
 }
 
 ul.contact-info > li a {
